<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/grafob"
    app:behavior_hideable="true"
    app:behavior_peekHeight="50dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottom_sheet_line"
        android:layout_width="@dimen/View_bottom_sheet"
        android:layout_height="@dimen/height_bottom_sheet"
        android:layout_marginTop="@dimen/marginTop_bottom_sheet"
        android:background="#0C0C0C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:gravity="center"
        android:text="Информация о погоде"
        android:textSize="25sp"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextView">

        <LinearLayout
            android:id="@+id/l4"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginLeft="25dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wind_speedText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/speed"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ws"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l5"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/wind_gustText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/por"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/wind_gust"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ws"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l6"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/humidityText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/voz"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/ws"
                android:textStyle="bold"


                />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear1">

        <LinearLayout
            android:id="@+id/l1"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/windDirText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/wind_dir"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/wind_dir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dir"
                android:textStyle="bold"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l2"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/daytimeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/dayTime"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/daytime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/day"
                android:textStyle="bold"


                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/l3"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:background="@drawable/but"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/polarText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/polar"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

            <TextView
                android:id="@+id/polar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/day"
                android:textStyle="bold"


                />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Дата"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.377" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="11.11.11"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.426" />

    <TextView
        android:id="@+id/textWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Порядковый номер недели."
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <TextView
        android:id="@+id/week"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="11"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textWeek" />

    <TextView
        android:id="@+id/surTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Время восхода Солнца"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/week" />

    <TextView
        android:id="@+id/sunrise"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="04:38"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/surTx" />

    <TextView
        android:id="@+id/sunsetTx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Время заката Солнца"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunrise" />

    <TextView
        android:id="@+id/sunset"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="19:34"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunsetTx" />

    <TextView
        android:id="@+id/noonCD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Фаза Луны"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sunset" />

    <TextView
        android:id="@+id/moonCode"
        android:layout_width="107dp"
        android:layout_height="27dp"
        android:gravity="center"
        android:text="0"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/noonCD" />




</androidx.constraintlayout.widget.ConstraintLayout>